<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:windowSoftInputMode="stateVisible"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/logo_layout"
            android:layout_marginTop="@dimen/logo_marginTop"
    >

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:src="@drawable/logo_black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/main_layout"
            app:layout_constraintTop_toBottomOf="@+id/logo_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:padding="5dp"
            android:layout_margin="20dp"
    >
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="10dp"
                android:id="@+id/scrollContainer">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/functionListHeight"
                        android:id="@+id/voidAndRefundLine">

                    <androidx.appcompat.widget.AppCompatButton
                            android:tag="@string/voidButton"
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:id="@+id/saleButton"
                            android:text="@string/sale"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:drawableTop="@drawable/void_purple"
                            android:layout_margin="5dp"
                    />


                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:id="@+id/refundButton"
                            android:text="@string/refund"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:drawableTop="@drawable/refund_purple"
                    />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="@dimen/functionListHeight"
                              android:id="@+id/keyAndListLine"
                              android:layout_below="@+id/voidAndRefundLine"
                              android:layout_marginTop="15dp"
                >
                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:id="@+id/cycleKeyButton"
                            android:text="@string/cycleKey"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:drawableTop="@drawable/cycle_key_purple"
                    />
                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:id="@+id/listButton"
                            android:text="@string/list"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:drawableTop="@drawable/list_purple"
                    />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="@dimen/functionListHeight"
                              android:id="@+id/preAuthAndCompletionLine"
                              android:layout_below="@+id/keyAndListLine"
                              android:layout_marginTop="15dp"
                >
                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:id="@+id/preAuthButton"
                            android:text="@string/preauth"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:paddingTop="10dp"

                    />
                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:id="@+id/completionButton"
                            android:text="@string/completion"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:paddingTop="10dp"
                    />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="@dimen/functionListHeight"
                              android:id="@+id/settingAndReportLine"
                              android:layout_below="@+id/preAuthAndCompletionLine"
                              android:layout_marginTop="15dp"
                >
                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:id="@+id/voidButton"
                            android:text="@string/voidButton"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:paddingTop="10dp"
                            android:drawableTop="@drawable/void_purple"
                    />
                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:id="@+id/reportButton"
                            android:text="@string/report"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:drawableTop="@drawable/report_purple"
                    />
                </LinearLayout>


                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="@dimen/functionListHeight"
                              android:id="@+id/exitLine"
                              android:layout_below="@+id/settingAndReportLine"
                              android:layout_marginTop="15dp"
                >
                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="fill_parent"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:background="@drawable/button_primary"
                            android:textAlignment="center"
                            android:id="@+id/exit"
                            android:text="@string/exit"
                            android:textColor="@color/buttonColor"
                            android:textSize="@dimen/textNormal"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:drawableTop="@drawable/exit_purple"
                    />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>